--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -55,7 +55,7 @@
           <view class="content-wrap">
             <view class="total-info row between">
               <view class="total-tips">共{{videoListTotal}}条短视频</view>
-              <button class="add-btn">
+              <button class="add-btn" bindtap="navToVideoCreate">
                 <image class="add-icon" src="./images/add.png" />
                 <text>短视频</text>
               </button>
