--- a/pages/subpages/mine/create-video/index.wxss
+++ b/pages/subpages/mine/create-video/index.wxss
@@ -1,41 +1,39 @@
 page {
   background: #fff;
 }
+
 .container {
   padding: 0 32rpx;
 }
+
 .title-wrap {
+  position: relative;
   display: flex;
   padding: 32rpx 0;
-  border-bottom: 1rpx solid #E6E6E6;
-}
-.title-textarea-wrap {
-  position: relative;
-  margin-right: 24rpx;
-  flex: 1;
-  height: 224rpx;
+  border-bottom: 1px solid #E6E6E6;
 }
 .title-textarea {
-  color: #333333;
+  margin-right: 24rpx;
+  flex: 1;
+  color: #333;
   line-height: 1.5;
 }
 .length-desc {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: 192rpx;
+  bottom: 32rpx;
+  color: #999;
   font-size: 28rpx;
-  color: #999999;
 }
-.cover-editor {
+.cover-wrap {
   position: relative;
   width: 168rpx;
-  height: 224rpx;
+  font-size: 0;
 }
 .cover {
-  width: 100%;
-  height: 100%;
+  width: 168rpx;
 }
-.editor-desc {
+.cover-editor {
   position: absolute;
   bottom: 0;
   width: 100%;
