--- a/pages/subpages/mine/create-video/index.wxss
+++ b/pages/subpages/mine/create-video/index.wxss
@@ -10,6 +10,10 @@
   background: #fff;
   border-radius: 16rpx;
 }
+.title {
+  color: #333;
+  font-weight: bold;
+}
 
 .title-textarea {
   margin-right: 24rpx;
@@ -47,6 +51,11 @@
 }
 .list:last-child {
   border-bottom: none;
+}
+.list-input {
+  margin-left: 30rpx;
+  flex: 1;
+  text-align: right;
 }
 .list-picker {
   color: #666;
