--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -182,7 +182,7 @@
 }
 
 .no-more-tips {
-  margin-top: 36rpx;
+  padding: 16rpx 0 24rpx;
   color: #999;
   font-size: 24rpx;
   text-align: center;
