--- a/components/video-item/index.wxss
+++ b/components/video-item/index.wxss
@@ -12,6 +12,24 @@
   width: 350rpx;
 }
 
+.private-tag {
+  position: absolute;
+  top: 12rpx;
+  left: 12rpx;
+  padding: 0 12rpx;
+  height: 36rpx;
+  color: #fff;
+  font-size: 20rpx;
+  line-height: 1;
+  background: #EE3769;
+  border-radius: 6rpx;
+}
+.private-icon {
+  margin-right: 4rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+
 .video-symbol {
   position: absolute;
   top: 12rpx;
