--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -7,9 +7,8 @@
   width: 100%;
   height: 44px;
   box-sizing: initial;
-  background: var(--theme-color-gradient);
+  background: linear-gradient(90deg, #1895F5 0%, #097FE6 100%);
   z-index: 100;
-  transition: opacity .6s ease;
 }
 .user-avatar {
   margin-left: 20px;
