--- a/pages/subpages/home/video/components/video-item/index.wxml
+++ b/pages/subpages/home/video/components/video-item/index.wxml
@@ -18,34 +18,31 @@
       <image class="follow-icon" wx:if="{{!item.isFollow}}" catchtap="followAuthor" src="./images/follow.png" />
     </view>
     <view class="btn" catchtap="praise">
-      <image class="btn-icon" src="/images/short-video/like{{item.isLike ? '-active' : ''}}.png" />
+      <image class="btn-icon" src="./images/like{{item.isLike ? '-active' : ''}}.png" />
       <view class="btn-desc">{{item.likeNumber ? NUM.over(item.likeNumber, 100000) : '点赞'}}</view>
     </view>
     <view class="btn" catchtap="showCommentPopup">
-      <image class="btn-icon" src="/images/short-video/comment.png" />
+      <image class="btn-icon" src="./images/comment.png" />
       <view class="btn-desc">{{item.commentNumber ? NUM.over(item.commentNumber, 100000) : '评论'}}</view>
     </view>
     <view class="btn" catchtap="collect">
-      <image class="btn-icon" style="width: 70rpx; height: 68rpx;" src="/images/short-video/like{{item.isLike ? '-active' : ''}}.png" />
+      <image class="btn-icon" style="width: 70rpx; height: 68rpx;" src="./images/like{{item.isLike ? '-active' : ''}}.png" />
       <view class="btn-desc">{{item.collectionNumber ? NUM.over(item.collectionNumber, 100000) : '收藏'}}</view>
     </view>
-    <view class="comment" catchtap="share">
-      <image class="btn-icon" src="/images/short-video/share.png" />
+    <view class="btn" catchtap="share">
+      <image class="btn-icon" src="./images/share.png" />
       <view class="btn-desc">{{item.shareNumber ? NUM.over(item.shareNumber, 100000) : '分享'}}</view>
     </view>
-    <view class="more-btn" catchtap="showFeaturePopup" wx:if="{{userInfo.id === item.authorInfo.id}}">
-      <image class="btn-icon" src="/images/short-video/more.png" />
-      <view class="btn-desc">更多</view>
+    <view class="btn" style="margin-top: 30rpx;" catchtap="showFeaturePopup" wx:if="{{userInfo.id === item.authorInfo.id}}">
+      <image class="btn-icon" src="./images/more.png" />
     </view>
   </view>
 
   <view class="video-info">
-    <view class="author-name-wrap">
-      <view class="author-name" catchtap="navToPersonalCenter">@{{item.authorInfo.nickname}}</view>
-      <view class="address" wx:if="{{item.address}}">
-        <image class="address-icon" src="https://img.ubo.vip/mp/index/short-video/address.png" />
-        <text>{{item.address}}</text>
-      </view>
+    <view class="author-name" catchtap="navToPersonalCenter">@{{item.authorInfo.nickname}}</view>
+    <view class="address" wx:if="{{item.address}}">
+      <image class="address-icon" src="/images/address.png" />
+      <text>{{item.address}}</text>
     </view>
     <view class="video-title">{{item.title}}</view>
   </view>
