--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -4,7 +4,7 @@
   <view class="cover-wrap">
     <image class="cover" mode="widthFix" src="{{item.imageList[0]}}" />
     <view class="address-info" wx:if="{{item.address}}">
-      <image class="address-icon" src="../../images/address.png" />
+      <image class="address-icon" src="/images/address.png" />
       <text class="address-detail omit single-line">{{item.address}}</text>
     </view>
   </view>
@@ -15,7 +15,7 @@
       <text class="name omit single-line">{{item.authorInfo.nickname}}</text>
     </view>
     <view class="praise-info">
-      <image class="praise-icon" src="../../images/heart.png" />
+      <image class="praise-icon" src="/images/heart.png" />
       <text>{{NUM.over(item.praiseNumber, 100000)}}</text>
     </view>
   </view>
