--- a/pages/subpages/home/video/components/video-item/index.wxss
+++ b/pages/subpages/home/video/components/video-item/index.wxss
@@ -2,13 +2,14 @@
   position: relative;
   width: 100%;
   height: 100%;
+  color: #fff;
   text-shadow: 0 0 1px #999;
 }
 
 .interactive-area {
   position: absolute;
   right: 8px;
-  bottom: calc(145px + env(safe-area-inset-bottom));
+  bottom: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,16 +38,15 @@
 }
 
 .btn {
-  margin-top: 45rpx;
+  margin-top: 40rpx;
 }
 .btn-icon {
-  width: 68rpx;
+  width: 70rpx;
   height: 68rpx;
 }
-.praise-count, .comment-count, .more-btn-desc {
-  margin-top: 10rpx;
-  color: #fff;
-  font-size: 24rpx;
+.btn-desc {
+  margin-top: 8rpx;
+  font-size: 22rpx;
   font-weight: 500;
   line-height: 33rpx;
   text-align: center;
@@ -55,7 +55,8 @@
 .video-info {
   position: absolute;
   left: 8px;
-  bottom: calc(65px + env(safe-area-inset-bottom));
+  bottom: 8px;
+  width: 620rpx;
 }
 
 .goods {
@@ -75,13 +76,7 @@
   height: 40rpx;
 }
 
-.author-name-wrap {
-  display: flex;
-  align-items: center;
-  margin-top: 10rpx;
-}
 .author-name {
-  color: #fff;
   font-size: 34rpx;
   font-weight: 600;
   line-height: 48rpx;
@@ -89,20 +84,17 @@
 .address {
   display: flex;
   align-items: center;
-  margin-left: 20rpx;
-  color: #fff;
+  margin-top: 10rpx;
   font-size: 24rpx;
 }
 .address-icon {
-  margin-right: 10rpx;
-  width: 20rpx;
-  height: 26rpx;
+  margin-right: 2rpx;
+  width: 30rpx;
+  height: 30rpx;
 }
 .video-title {
   margin-top: 10rpx;
-  width: 632rpx;
-  color: #fff;
-  font-size: 28rpx;
+  font-size: 26rpx;
   line-height: 40rpx;
 }
 
