--- a/components/comment-popup/index.wxml
+++ b/components/comment-popup/index.wxml
@@ -11,7 +11,7 @@
     <view class="empty-tips" wx:if="{{totalCount == 0}}">——暂无评论，来抢沙发——</view>
 
     <scroll-view class="comment-lists" bindscrolltolower="setCommentsList" scroll-x="false" scroll-y>
-      <comment-list wx:for="{{commentsList}}" wx:key="index" item="{{item}}" curCommentId="{{curCommentId}}" bind:reply="showInputModal">
+      <comment-list wx:for="{{commentsList}}" wx:key="index" item="{{item}}" curCommentId="{{curCommentId}}" bind:reply="reply">
         <comment-list wx:if="{{item.comment_num != 0 && !item.replyFold}}" wx:for="{{item.replyLists}}" wx:key="index" wx:for-item="child" item="{{child}}" isChild curCommentId="{{curCommentId}}" bind:reply="showInputModal"  />
         <view class="spread-reply-btn" wx:if="{{item.comment_num != 0}}" ontap="spreadReply" data-index="{{index}}">
           <text>{{(item.comment_num > item.replyLists.length || item.replyFold) ? ('展开查看' + (item.replyFold ? item.comment_num : (item.comment_num - item.replyLists.length)) + '条回复') : '收起'}} </text>
@@ -22,12 +22,10 @@
     </scroll-view>
 
     <view class="input-bar">
-      <view class="input-main" catchtap="showInputModal">
+      <view class="input-main" catchtap="comment">
         <text class="desc">快说点好听的～</text>
         <image style="width: 40rpx; height: 40rpx;" catchtap="atUser" src="./images/at-icon.png" />
       </view>
     </view>
   </view>
 </popup>
-
-<input-modal id="inputModal" wx:if="{{inputModalVisible}}" videoId="{{videoId}}" replyCommentId="{{replyCommentId}}" replyUserName="{{replyUserName}}" bind:sendedMsg="sendedMsg" />
