--- a/components/comment-popup/components/comment-item/index.wxss
+++ b/components/comment-popup/components/comment-item/index.wxss
@@ -1,7 +1,7 @@
-.comment-list {
+.comment-item {
   padding: 10rpx 20rpx;
 }
-.comment-list.is-reply {
+.comment-item.is-reply {
   margin-top: 10rpx;
   padding: 0;
 }
